[package]
name = "dora-recorder"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.36.0", features = ["fs", "rt", "rt-multi-thread"] }
dora-node-api = { workspace = true } 
eyre = "0.6.8"
chrono = "0.4.31"
dora-tracing = { version = "0.3.12" }
parquet = { version = "54.2.1", features = ["async"] }
arrow = "54.3.1"